--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@ Modification: New Perspectives on HTML5 and CSS3
       <div id="time"></div>  
    </div>
 <script src="js-demo.js" defer>
+</script>
 </body>
+
 </html>
